# granular_certificate_registry

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.ci.yml  compose.override.yml  compose.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  records  requirements.txt  setup.py  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ci.yml  main.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: App.js  index.js
frontend/components/: Account.js  CancelForm.js  CertificateList.js  DeviceRegisterForm.js  IssueForm.js  ReserveForm.js
frontend/public/: index.html
gc_registry/: config.py  logging_config.py  main.py  seed.py  settings.py  utils.py
gc_registry/account/: models.py  routes.py  schemas.py  services.py  validation.py
gc_registry/api/: main.py  utils.py
gc_registry/authentication/: models.py  schemas.py  services.py
gc_registry/certificate/: models.py  routes.py  schemas.py  services.py  validation.py
gc_registry/client/: authentication.py
gc_registry/core/: services.py
gc_registry/crud/: account.py  authentication.py  certificate.py  device.py  measurement.py  organisations.py  storage.py  user.py
gc_registry/database/: config.py  db.py
gc_registry/datamodel/: db.py
gc_registry/dev/: test_measurements.csv
gc_registry/device/: models.py  routes.py  schemas.py  services.py
gc_registry/measurement/: models.py  routes.py  schemas.py  services.py
gc_registry/models/: account.py  certificate.py  certificate_action.py  device.py  measurement.py  organisation.py  storage.py  storage_action.py  user.py
gc_registry/notebooks/: demo_notebook.ipynb
gc_registry/organisation/: models.py  routes.py  schemas.py
gc_registry/schemas/: account.py  authentication.py  certificate.py  certificate_action.py  device.py  entities.py  items.py  measurement.py  organisation.py  storage.py  storage_action.py  user.py  user_account_link.py
gc_registry/static/: openapi.yaml
src/: App.js  config.py  index.js  main.py  seed.py  utils.py
(+155 files in other folders)
